adding userdata in LS

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bit-bin": "^14.7.6",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.1.4",
@@ -16,11 +15,13 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-token-auth": "^1.1.7",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.1",
     "styled-components": "^5.1.1",
+    "uuid": "^8.3.1",
     "yup": "^0.29.1"
   },
   "scripts": {
