--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,16 +4,18 @@
   "description": "back end for myChatApp",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Emad Adel",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
-    "mongoose": "^5.9.18",
-    "socket.io": "^2.3.0"
+    "mongoose": "^5.13.5",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
