--- a/back-end/.env
+++ b/back-end/.env
@@ -2,3 +2,4 @@ PORT = 5000
 DBNAME = "myChatAppDb"
 DBURL = "mongodb://localhost:27017/"
 FRONTEND_URL = "http://localhost:3000"
+PASS_PHRASE = "myPassPhrase"
