--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-jwt": "^1.1.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
