--- a/back-end/.env
+++ b/back-end/.env
@@ -1,5 +1,12 @@
-PORT = 5000
-DBNAME = "myChatAppDb"
-DBURL = "mongodb://localhost:27017/"
-FRONTEND_URL = "http://localhost:3000"
-PASS_PHRASE = "myPassPhrase"
+PORT = 4111
+FRONTEND_URL = "http://localhost:5173"
+PASS_PHRASE = "shhh"
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="mongodb+srv://emadadel:t1uiEV2IlykAG8uq@chatappcluster.nhmwwto.mongodb.net/ChatappCluster?retryWrites=true&w=majority"
