--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,53 +2,49 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
-    "bootstrap": "^4.5.0",
-    "font-awesome": "^4.7.0",
-    "formik": "^2.1.4",
-    "jsonwebtoken": "^8.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-jwt": "^1.1.3",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-token-auth": "^1.1.7",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.1",
-    "styled-components": "^5.1.1",
-    "uuid": "^8.3.1",
-    "yup": "^0.29.1"
-  },
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "auth-form-react": "^1.0.5",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.4.5",
+    "jose": "^5.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
+    "react-token-auth": "^2.3.8",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.7.4",
+    "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.0.4"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "sass": "^1.71.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.1.4"
   }
 }
